# Carmenere-LLM

./: .gitignore  LICENSE  README.md  chat.mkv  chat.py  image_generator.py  pyproject.toml  server.py
helpers/: functions.py
model_cache/: .placeholder
