[project]
name = "carmenere-llm"
version = "1.0.0"
description = "Local inference LLM using OpenVINO"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.5",
    "huggingface-hub>=1.4.1",
    "openvino-genai>=2025.4.1.0",
    "optimum[nncf,openvino]>=1.17.1",
    "pillow>=12.1.0",
    "prompt-toolkit>=3.0.52",
    "uvicorn>=0.40.0",
]
